--- a/index.html
+++ b/index.html
@@ -69,12 +69,11 @@
     light.intensity = 0.7;
 
     // Our built-in 'ground' shape.
-    var ground = BABYLON.MeshBuilder.CreateGround("ground", {width: 6, height: 6}, scene);
-    
-    let groundMaterial = new BABYLON.StandardMaterial("Ground Material", scene);
-    ground.material = groundMaterial;
-    let groundTexture = new BABYLON.Texture(Assets.textures.checkerboard_normal_png.rootUrl, scene);
-    ground.material.diffuseTexture = groundTexture;
+    //var ground = BABYLON.MeshBuilder.CreateGround("ground", {width: 6, height: 6}, scene);
+    //let groundMaterial = new BABYLON.StandardMaterial("Ground Material", scene);
+    //ground.material = groundMaterial;
+    //let groundTexture = new BABYLON.Texture(Assets.textures.checkerboard_normal_png.rootUrl, scene);
+    //ground.material.diffuseTexture = groundTexture;
 
     BABYLON.SceneLoader.ImportMeshAsync("", "", "scene.glb");
 
