--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     //let groundTexture = new BABYLON.Texture(Assets.textures.checkerboard_normal_png.rootUrl, scene);
     //ground.material.diffuseTexture = groundTexture;
 
-    BABYLON.SceneLoader.ImportMeshAsync("", "", "scene.glb");
+    BABYLON.SceneLoader.ImportMeshAsync("", "", "TestGLB.glb");
 
     //BABYLON.SceneLoader.ImportMesh("houuses", Assets.meshes.Yeti.rootUrl, Assets.meshes.Yeti.filename, scene, function(newMeshes){
     //  newMeshes[0].scaling = new BABYLON.Vector3(0.1, 0.1, 0.1);
